<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2014 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">SoundWatch</string>
    <string name="intro">Waiting for data to arrive\u2026</string>
    <string name="capability_2_notification">Listen</string>
    <string name="capabilities_1_and_2_notification">Stop</string>
    <string name="no_device">No device connected</string>
    <string name="connected_nodes">Connected: %1$s</string>
    <string name="main_text_activity_big_text_main">
        Sound Prediction
    </string>
    <string name="click_the_button_above_n_to_begin_listening">Click the button above \n to begin listening</string>
    <string name="welcome">Welcome to</string>
    <string name="soundwatch">SoundWatch</string>
    <string name="mic">mic</string>
    <string name="snooze">Snooze for</string>
    <string name="mic_button">Microphone Button</string>
    <string name="listening">Listening...</string>
    <string name="error_recording">Error starting recording</string>
    <string name="error_initializing">Error initializing recorder</string>
    <string name="error_server_connection">Server connection error</string>
</resources>
